<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="328dp"
        android:layout_height="330dp"

        android:contentDescription="@string/fragment_login_picture_dog"
        android:src="@mipmap/dog_fauna_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_login_heading_fauna_id"
        android:theme="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="260dp"

        android:text="@string/fragment_login_heading_fauna"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_add_task_entry_text_input_email_input_id"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:hint="@string/fragment_login_text_input_email_input"
        android:inputType="textEmailAddress"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:text="@string/fragment_login_text_input_edit_template_text"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_add_task_entry_text_topic_input_id"
        android:inputType="textNoSuggestions"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:hint="@string/fragment_login_text_password_input_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_task_entry_text_input_email_input_id">

                <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fragment_login_password_input_edit_template_text"
                    android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_button_login_id"
        android:layout_width="329dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:text="@string/fragment_login_button_login_namr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_task_entry_text_topic_input_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_button_forgot_password_id"
        android:layout_width="334dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/fragment_login_button_forgot_password_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_button_login_id" />

    <View
        android:id="@+id/view2"

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_button_forgot_password_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_button_register_id"
        android:layout_width="336dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_login_button_register_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>