<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:layout_marginBottom="5dp"
    android:background="@drawable/entry_shape"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/entry_item_calendar_image_id"
            android:layout_width="58dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.617"
            app:srcCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/entry_item_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/entry_item_title_template_text"
            app:layout_constraintStart_toEndOf="@+id/entry_item_calendar_image_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/entry_item_content_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_item_content_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/entry_item_calendar_image_id"
            app:layout_constraintTop_toBottomOf="@+id/entry_item_title_id" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="127dp"
            android:layout_height="68dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/date_time_item_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/entry_item_content_id"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/entry_item_title_template_text_date_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entry_item_title_template_date_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/entry_item_clock_image_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entry_item_title_template_text_date_id"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:id="@+id/entry_item_time_template_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/entry_item_time_template_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/entry_item_clock_image_id"

                app:layout_constraintVertical_bias="0.111" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>